# internal/incident_log/impl_incident_types.go
@@ -13,6 +13,16 @@ func NewIncidentTypesApi() IncidentTypesAPI {
 	return &implIncidentTypesAPI{}
 }
 
-func (o implIncidentTypesAPI) GetIncidentTypes(c *gin.Context) {
-	c.AbortWithStatus(http.StatusNotImplemented)
+func (o *implIncidentTypesAPI) GetIncidentTypes(c *gin.Context) {
+	updateIncidentLogFunc(c, func(
+		c *gin.Context,
+		incidentLog *IncidentLogDefinition,
+	) (updatedIncidentLog *IncidentLogDefinition, responseContent interface{}, status int) {
+		result := incidentLog.PredefinedIncidentTypes
+		if result == nil {
+			result = []IncidentType{}
+		}
+
+		return nil, result, http.StatusOK
+	})
 }
