# internal/incident_log/model_incident_log_definition.go
@@ -1,0 +1,26 @@
+/*
+ * IncidentLog API
+ *
+ * Incident reporting and security event management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: your_email@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package incident_log
+
+type IncidentLogDefinition struct {
+
+	// Unique identifier of the incident log
+	Id string `json:"id"`
+
+	// Human readable display name
+	Name string `json:"name"`
+
+	Location string `json:"location"`
+
+	Incidents []Incident `json:"incidents,omitempty"`
+
+	PredefinedIncidentTypes []IncidentType `json:"predefinedIncidentTypes,omitempty"`
+}
